--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -33,13 +33,13 @@
             <li>
                 <div class="profile-details">
                     <div class="profile-content">
-                        <img src="assets/images/profiles.jpg" alt="profileImg">
+                        <img src="/assets/images/profile.jpg" alt="profileImg">
                     </div>
                     <div class="name-job">
                         <div class="profile_name">Edwin</div>
                         <div class="job">Rivadeneira</div>
                     </div>
-                    <a href="../login"><i class='bx bx-log-out'></i></a>
+                    <a href="/login"><i class='bx bx-log-out'></i></a>
                 </div>
             </li>
         </ul>
